Adds new sections for analyses of cm Corrects typos

--- a/Brandt-VIEWS2-Demo.Rmd
+++ b/Brandt-VIEWS2-Demo.Rmd
@@ -406,7 +406,7 @@ print(unlist(check.crps), digits = 3)
 
 ## Metrics over time horizons
 
-## Benchmarks comaprisons
+## Benchmarks comparisons
 
 ## Skill scores
 
